# openclaw

./: .gitignore  ARCHITECTURE_PLAN.md  DOCUMENTATION_OWNERSHIP_MATRIX.md  HANDOFF_CONTRACT_TRADING_TO_SOFTWARE.md  NEXUSCTL_FUNCTIONS.md  README.md  REQUIREMENTS_CLI_DB_PLAN.md  SOFTWARE_DEVELOPMENT_SYSTEM.md  SYSTEM_OVERVIEW.md  TRADING_SYSTEM.md  check_db.py
nexusctl/: NEXUSCTL_CLI_DESIGN.md  README.md  pyproject.toml
nexusctl/docs/: API_CONTRACT.md
nexusctl/src/nexusctl/: __init__.py  api.py  cli.py  main.py  models.py  session.py
nexusctl/src/nexusctl.egg-info/: SOURCES.txt  top_level.txt
nexusctl/src/nexusctl/backend/: main.py  server.py  storage.py
nexusctl/tests/: conftest.py
nexusctl/tests/integration/: test_acceptance_criteria.py  test_security_hardening.py
nexusctl/tests/unit/: test_cli_validation_and_exit_codes.py  test_handoff_lifecycle_ops.py  test_session_security.py
openclaw-nexus/docs/archiv/referenzen/setup/nexusctl/: pyproject.toml
openclaw-nexus/nexusctl/: pyproject.toml
openclaw-nexus/nexusctl/src/nexusctl/adapters/git/: __init__.py  applier.py  diff.py  (+1 more)
openclaw-nexus/nexusctl/src/nexusctl/app/: acceptance_service.py  audit_service.py  backup_service.py  check_service.py  feature_request_service.py  generation_service.py  github_service.py  goal_service.py  merge_service.py  patch_service.py  reconciliation_alerts.py  reconciliation_drift.py  reconciliation_payloads.py  reconciliation_service.py  recovery_evidence.py  restore_drill_service.py  review_service.py  runtime_tool_service.py  schedule_service.py  scope_service.py  work_service.py
openclaw-nexus/nexusctl/src/nexusctl/authz/: __init__.py  capability_matrix.py  policy_engine.py  subject.py  token_registry.py
openclaw-nexus/nexusctl/src/nexusctl/domain/: __init__.py  errors.py  models.py  runtime_tools.py  states.py
openclaw-nexus/nexusctl/src/nexusctl/storage/: __init__.py  event_store.py
openclaw-nexus/nexusctl/tests/unit/: test_placeholder_structure.py
(+360 files in other folders)
