[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexusctl"
version = "0.1.0"
description = "OpenClaw nexusctl MVP CLI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
nexusctl = "nexusctl.main:main"
nexusctl-server = "nexusctl.backend.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
