[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexusctl"
version = "2.0.0"
description = "OpenClaw Nexus source-of-truth CLI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
nexusctl = "nexusctl.main:main"
nexusctl-server = "nexusctl.backend.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q -ra -p no:ddtrace --durations=20"
faulthandler_timeout = 60
markers = [
    "unit: fast tests without an embedded HTTP server",
    "integration: tests that start the embedded nexusctl HTTP server",
    "networkish: tests that intentionally exercise unreachable network paths with short timeouts",
    "slow: tests that may be slower on constrained CI workers",
]
